# shabdabhav

./: .env  Dockerfile  Dockerfile.gateway  Dockerfile.quic  README.md  README_v0.md  docker-compose.yml  models.md  pyproject.toml  quic_cert.pem  quic_key.pem  setup.py
.github/: CODEOWNERS
api/: app.py  download.md
api/models/: model_cache.py  parler_tts.py  piper_tts.py  xtts_v2.py
api/routers/: rt_parler_tts.py  rt_piper_tts.py
src/common/: auth.py  config.py  model_store.py  rate_limiter.py
src/gateway/: main.py
src/streaming/: h3_server.py
src/streaming/engines/: hf_whisper.py  parler_cli.py  stt_cli.py  tts_cli.py
