[project]
name = "shabdabhav"
version = "0.1.0"
description = "FastAPI server for Parler-TTS and XTTS-v2 models with lazy loading"
authors = [{ name = "Hardik Patel", email = "hardikprl94@gmail.com" }]
requires-python = ">=3.11"

# Mandatory/core dependencies (minimal install, FastAPI only)
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "httpx",
    "torch"
]

# Optional model dependencies (extras per model group)
[project.optional-dependencies]
parler-tts = [
    "parler-tts",
    "transformers",
    "soundfile",
    "sentencepiece"
]
piper-tts = [
    "piper-tts",
    "soundfile",
    "huggingface_hub"
]
xtts = [
    "tts"
]
huggingface = [
    "huggingface_hub"
]

[tool.poetry.scripts]
start = "uvicorn api.app:app --host 0.0.0.0 --port 8000 --log-level info"
